--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet"  href="style.css">
+
     
 </head>
 <body>
-    <h1 > setting up linters </h1>
+    
+    <div class="logo">My Logo</div>
+    <button class="hamburger-button">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </button>
 </body>
 </html>
