Header section completed

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     
 </head>
 <body>
-    
-    <div class="logo">My Logo</div>
-    <button class="hamburger-button">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-    </button>
+    <div class="container">
+    <div class="toolbar">
+        <div class="logo">My Logo</div>
+        <div class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <div class="headline section"></div>
+</div>
 </body>
 </html>
