Updated form section

--- a/index.html
+++ b/index.html
@@ -175,15 +175,17 @@
                     in developing, a feature that you need built or a project that 
                     needs coding. I’d love to help with it!</p>
            </div>
+           <form action="https://formspree.io/f/xayglvpy" method="post">
             <form action="process_form.php" >
+
                 <input class="forminput" type="text" id="name" name="name" >
                 <input class="forminput" type="email" id="email" name="email">
                 <textarea class="textarea" placeholder="Write your message here..." ></textarea>
-            </form>
-            <button class="lastbutton">
+            <button type="submit" class="lastbutton">
                 <span class="btext">Get in touch</span>
             </button>
             <hr class="line2">
+        </form></form>
             </section>
     </div>
 
