--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>I’m a software developer! I can help you build a product, feature, or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>    
             </div>
             <div class="wrap">
-            <div class="endtext">LET’S CONNECT</div>
+            <div class="endtext1">LET’S CONNECT</div>
             <img src="/contact2.png" alt="social media icons">
             <div class="button">
               <div class="buttontext">Get my resume</div>
@@ -141,7 +141,7 @@
             <div class="content-wrapper">
               <div class="section-title">About Myself</div>
               <p class="section-text">Hello I’m a software developer! I can help you build a product, feature, or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
-              <div class="endtext">LET’S CONNECT</div>
+              <div class="endtext1">LET’S CONNECT</div>
               <img src="/contact2.png" alt="social media icons">
               <div class="button">
                 <div class="buttontext">Get my resume</div>
