--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="wrap">
             <div class="endtext1">LET’S CONNECT</div>
-            <img src="/contact2.png" alt="social media icons">
+            <img src="./contact2.png" alt="social media icons">
             <div class="button">
               <div class="buttontext">Get my resume</div>
           </div></div>
@@ -46,13 +46,13 @@
             <!--card one-->
             <article class="card">
                 <div class="imagecontainer">
-                <img class="snapshot" src="/c1.png" alt="Snapshot">
+                <img class="snapshot" src="./c1.png" alt="Snapshot">
             </div>
                 <div class="Block">
                 <div class="layout">
                     <h2 class="Title">Tonic</h2>
                     <img class="Frame">
-                        <img src="/Frame 2.png" alt="Frame">
+                        <img src="./Frame 2.png" alt="Frame">
                     </img>
                     <p class="firstText">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                     <ul>
